# tsp_optimization_gurobi

./: .gitignore  CMakeLists.txt  Input_output.c  Plot_graph.c  README.md  Tsp.c  Tsp.h  Tsp_MTZ.c  Utils.c  common.h  dissertation_structure.md  gnuplot_c.c  gnuplot_c.h  gnuplot_lib.c  gnuplot_lib.h  inputOutput.c  inputOutput.h  input_output.c  main.c  plotGraph.c  plotGraph.h  plot_graph.c  plot_graph.h  report_structure.md  tsp.c  tsp.h  tspMTZ.c  tspMTZ.h  tsp_MTZ.c  utils.c  utils.h
include/: common.h  input_output.h  matheuristic.h  matheuristic_utils.h  meta_heuristic_utils.h  mt64.h  peaceful_queens_optimization.h  plot_graph.h  tsp.h  tsp_MTZ.h  tsp_bad_compact.h  tsp_fischetti.h  tsp_flow1.h  tsp_flow2.h  tsp_flow3.h  tsp_grasp.h  tsp_hardfixing.h  tsp_lazycall.h  tsp_local_branching.h  tsp_loop.h  tsp_matheuristic.h  tsp_mtz.h  tsp_simulated_annealing.h  tsp_std.h  tsp_timed_stage1.h  tsp_timed_stage2.h  tsp_timed_stage3.h  tsp_usercall.h  tsp_vns.h  union_find.h  utils.h
src/: input_output.c  main.c  matheuristic.c  matheuristic_utils.c  meta_heuristic_utils.c  mt19937-64.c  peaceful_queens_optimization.c  plot_graph.c  tsp_MTZ.c  tsp_bad_compact.c  tsp_fischetti.c  tsp_flow1.c  tsp_flow2.c  tsp_flow3.c  tsp_grasp.c  tsp_hardfixing.c  tsp_lazycall.c  tsp_local_branching.c  tsp_loop.c  tsp_matheuristic.c  tsp_metaheuristics.c  tsp_metaheuristics.h  tsp_mtz.c  tsp_restart.c  tsp_restart.h  tsp_simulated_annealing.c  tsp_std.c  tsp_timed_stage1.c  tsp_timed_stage1.h  tsp_timed_stage2.c  tsp_timed_stage2.h  tsp_timed_stage3.c  tsp_usercall.c  tsp_vns.c  union_find.c  utils.c
